force-app/main/default/objects/CCPA_Request_Event__e/CCPA_Request_Event__e.object-meta.xml
<CustomObject>
    <label>CCPA Request Event</label>
    <pluralLabel>CCPA Request Events</pluralLabel>
    <description>Platform Event for CCPA request audit trail</description>
</CustomObject>