force-app/main/default/objects/CCPA_Request_Event__e/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <label>Request Date</label>
    <type>Text</type>
    <length>255</length>
    <description>Date and time of the CCPA request (stored as text for platform events)</description>
</CustomField>