force-app/main/default/objects/CCPA_Request_Event__e/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Text</type>
    <length>255</length>
    <description>Type of CCPA request (Right to Know, Do Not Sell, etc.)</description>
</CustomField>